host fix